# exercise

./: Cargo.toml  LICENSE-APACHE  README.md
antithesis/: Dockerfile  docker-compose.yaml  server1.conf  server2.conf  server3.conf
antithesis/server-common/: Dockerfile  server3.conf
antithesis/server1/: Dockerfile  server1.conf
antithesis/server2/: Dockerfile  server2.conf
antithesis/server3/: Dockerfile  server3.conf
antithesis/validator/: Dockerfile
confs/: supercluster_0.conf  supercluster_1.conf  supercluster_2.conf
src/: confgen.rs  lib.rs  main.rs
