[package]
name = "exercise"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"
nats = { version = "0.9.4", features = ["jetstream"] }
rand = "0.8.3"
